--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/activity_main_mood"
+        android:layout_width="731dp"
+        android:layout_height="1268dp"
+        android:background="#ffb8e986"
+        android:src="@drawable/smiley-sad" />
+
+    <Button
+        android:id="@+id/activity_main_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="bottom|left"
+        android:background="@drawable/ic_history_black"
+        android:layout_margin="20dp"/>
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/activity_main_history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_note_add_black"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="20dp"/>
+
+</FrameLayout>
