--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
@@ -9,10 +8,11 @@
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/activity_main_mood"
-        android:layout_width="731dp"
-        android:layout_height="1268dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#ffb8e986"
-        android:src="@drawable/smiley-sad" />
+        android:padding="30dp"
+        android:src="@drawable/smileyhappy" />
 
     <Button
         android:id="@+id/activity_main_comment"
