--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,22 +12,24 @@
         android:layout_height="match_parent"
         android:background="#ffb8e986"
         android:padding="30dp"
-        android:src="@drawable/smileyhappy" />
+        android:src="@drawable/smileyhappy"/>
 
-    <Button
-        android:id="@+id/activity_main_comment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
-        android:background="@drawable/ic_history_black"
-        android:layout_margin="20dp"/>
-
-    <Button
+    <android.support.v7.widget.AppCompatImageButton
         android:id="@+id/activity_main_history"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_note_add_black"
+        android:layout_gravity="bottom|left"
+        android:background="@android:color/transparent"
+        android:layout_margin="30dp"
+        android:src="@drawable/ic_note_add_black"/>
+
+    <android.support.v7.widget.AppCompatImageButton
+        android:id="@+id/activity_main_comment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_margin="20dp"/>
+        android:background="@android:color/transparent"
+        android:layout_margin="30dp"
+        android:src="@drawable/ic_history_black"/>
 
 </FrameLayout>
