Modified the layout of History activity - no logic yet - to get it definitive.

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,131 +1,262 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:background="#bbb"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:background="#bbb"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal"
         android:weightSum="1">
 
-        <TextView
-            android:id="@+id/previous_mood_7"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:background="#ffde3c50"
-            tools:text="Il y a une semaine" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:weightSum="1">
-
-        <TextView
-            android:id="@+id/previous_mood_6"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="#ffb8e986"
-            android:layout_weight=".8"
-            tools:text="Il y 6 jours" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_comment_black_48px"
-            android:contentDescription="Comment"
-            android:layout_gravity="center"/>
-    </LinearLayout>
-
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:weightSum="1">
-        <TextView
-            android:id="@+id/previous_mood_5"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="#fff9ec4f"
-            android:layout_weight="1"
-            tools:text="Il y a 5 jours" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:weightSum="1">
-        <TextView
-            android:id="@+id/previous_mood_4"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="#ffde3c50"
             android:layout_weight=".2"
-            tools:text="Il y a 4 jours" />
+            android:orientation="vertical"
+            android:background="#ffde3c50">
+
+            <TextView
+                android:id="@+id/previous_mood_7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:paddingLeft="5dp"
+                android:text="Il y a 1 semaine" />
+
+            <ImageView
+                android:id="@+id/previous_comment_7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:paddingRight="20dp"
+                android:layout_marginTop="-20dp"
+                android:src="@drawable/ic_comment_black_48px" />
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:orientation="horizontal"
         android:weightSum="1">
-        <TextView
-            android:id="@+id/previous_mood_3"
+
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="#ff9b9b9b"
-            android:layout_weight=".4"
-            tools:text="Il y a 3 jours" />
+            android:layout_weight=".8"
+            android:background="#ffb8e986"
+            android:orientation="vertical"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/previous_mood_6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:paddingLeft="5dp"
+                android:text="Il y 6 jours" />
+
+            <ImageView
+                android:id="@+id/previous_comment_6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:paddingRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/ic_comment_black_48px" />
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:orientation="horizontal"
         android:weightSum="1">
-        <TextView
-            android:id="@+id/previous_mood_2"
+
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="#fff9ec4f"
             android:layout_weight="1"
-            tools:text="Avant-hier" />
+            android:background="#fff9ec4f"
+            android:orientation="vertical"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/previous_mood_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:paddingLeft="5dp"
+                android:text="Il y 5 jours" />
+
+            <ImageView
+                android:id="@+id/previous_comment_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:paddingRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/ic_comment_black_48px" />
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="horizontal"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:orientation="horizontal"
         android:weightSum="1">
-        <TextView
-            android:id="@+id/previous_mood_1"
+
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="#a5468ad9"
-            android:layout_weight=".6"
-            tools:text="Hier" />
+            android:layout_weight=".2"
+            android:background="#ffde3c50"
+            android:orientation="vertical"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/previous_mood_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:paddingLeft="5dp"
+                android:text="Il y 4 jours" />
+
+            <ImageView
+                android:id="@+id/previous_comment_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:paddingRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/ic_comment_black_48px" />
+        </LinearLayout>
     </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".4"
+            android:background="#ff9b9b9b"
+            android:orientation="vertical"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/previous_mood_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:paddingLeft="5dp"
+                android:text="Il y 3 jours" />
+
+            <ImageView
+                android:id="@+id/previous_comment_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:paddingRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/ic_comment_black_48px" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#fff9ec4f"
+            android:orientation="vertical"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/previous_mood_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:paddingLeft="5dp"
+                android:text="Avant-hier" />
+
+            <ImageView
+                android:id="@+id/previous_comment_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:paddingRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/ic_comment_black_48px" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".6"
+            android:background="#a5468ad9"
+            android:orientation="vertical"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/previous_mood_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:paddingLeft="5dp"
+                android:text="Hier" />
+
+            <ImageView
+                android:id="@+id/previous_comment_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:paddingRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/ic_comment_black_48px" />
+        </LinearLayout>
+    </LinearLayout>
+
 
 </LinearLayout>
