--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,7 @@
         android:layout_height="match_parent"
         android:background="#fff9ec4f"
         android:padding="50dp"
-        android:src="@drawable/smileyhappy"
-        android:tag="happy"/>
+        android:src="@drawable/smileyhappy"/>
 
     <android.support.v7.widget.AppCompatImageButton
         android:id="@+id/activity_main_comment_btn"
